<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/background"
    android:alpha="0.9"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.5">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="14sp"
            android:background="@drawable/textview_2"
            android:gravity="center"
            android:text="@string/dd_date_string"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/TTextView_ID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="14sp"
            android:background="@drawable/textview_2"
            android:gravity="center"
            android:text="@string/T_string"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/RHTextView_ID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="14sp"
            android:background="@drawable/textview_2"
            android:gravity="center"
            android:text="@string/RH_string"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/PoPTextView_ID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="14sp"
            android:background="@drawable/textview_2"
            android:gravity="center"
            android:text="@string/PoP_string"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/CITextView_ID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="14sp"
            android:background="@drawable/textview_2"
            android:gravity="center"
            android:text="@string/CI_string"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/WxTextView_ID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="14sp"
            android:background="@drawable/textview_2"
            android:text="@string/Wx_string"
            android:gravity="center"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.5">
        <TextView
            android:id="@+id/WDTextView_ID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:background="@drawable/textview_2"
            android:text="@string/WD_string"
            android:gravity="center"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/weatherListView_ID"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />

</LinearLayout>
