<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main8Activity"
    android:orientation="horizontal"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:background="@mipmap/background"
    android:alpha="0.9"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <ImageView
                android:id="@+id/starImageView_ID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitCenter"
            />

            <TextView
                android:id="@+id/activity_TextView_ID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/star_name"
                android:textSize="28sp"
                android:textColor="@color/white"/>

            <ImageButton
                android:id="@+id/favoriteImageButton_ID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:backgroundTint="@android:color/transparent"
                android:scaleType="fitCenter"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/star_english_name"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/starEnNameTextView_ID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
        >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/star_right_ascension"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
            />

            <TextView
                android:id="@+id/StarAscensionTextView_ID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/star_angle"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/starAngleTextView_ID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/star_family"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/starFamily_ID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/star_introduce"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@color/white"
        />


        <TextView
            android:id="@+id/starIntroduceTextView_ID"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:scrollbars="vertical"
            android:textSize="18sp"
            android:textColor="@color/white"
        />



    </LinearLayout>
    
    
    

    
</LinearLayout>