<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main18Activity"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="30dp"
    android:paddingRight="20dp"
    android:paddingBottom="30dp"
    android:background="@mipmap/background"
    android:alpha="0.9"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/register"
        android:gravity="center_vertical"
        android:textSize="24sp"
        android:textColor="@color/white"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/user_account"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/accountEditText_ID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:textColor="@color/white"
            android:maxLines="1"
            android:inputType="text"
            />

        <TextView
            android:id="@+id/accountTextView_ID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
    >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/user_password"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/password_waring"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:textColor="@color/red"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <EditText
            android:id="@+id/passwordEditText_ID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:layout_weight="1.5"
            android:maxLines="1"
            android:inputType="text"
            />

        <TextView
            android:id="@+id/passwordTextView_ID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/default_address"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="horizontal"
        >

        <Spinner
            android:id="@+id/citySpinner_ID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/sectionSpinner_ID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/other_address"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            />

        <LinearLayout
            android:id="@+id/helpLinearLayout_ID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/imagebutton1"
                android:src="@android:drawable/ic_menu_help"
                android:tint="@color/white"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/why_address"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                />
        </LinearLayout>


    </LinearLayout>

    <EditText
        android:id="@+id/otherAddressEditText_ID"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:textColor="@color/white"
        android:maxLines="1"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/helpTextView_ID"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textSize="16sp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/registerButton_ID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/register"/>

    </LinearLayout>

</LinearLayout>