<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity"
    android:orientation="horizontal"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:background="@mipmap/background"
    android:alpha="0.9"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@mipmap/logo"
                android:scaleType="fitCenter"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/account"
                android:gravity="center_vertical"
                android:textSize="30sp"
                android:textColor="@color/white"
                />

            <EditText
                android:id="@+id/accountEditText_ID"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/edittext"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:maxLines="1"
                android:inputType="text"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/password"
                android:gravity="center_vertical"
                android:textSize="30sp"
                android:textColor="@color/white"
                />

            <EditText
                android:id="@+id/passwordEditText_ID"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/edittext"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:maxLines="1"
                android:inputType="text"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/password_waring"
                android:textSize="20sp"
                android:textColor="@color/white"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8">

            <Button
                android:id="@+id/signInButton_ID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/button1"
                android:onClick="Sign"
                android:text="@string/sign_in"
                android:textSize="18sp"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/registerButton_ID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/register"
                android:onClick="Register"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.2"
            android:orientation="horizontal"/>

    </LinearLayout>




</LinearLayout>